cmake_minimum_required (VERSION 2.8)
project (llvm_)

include_directories (${CMAKE_SOURCE_DIR}/llvm/include)
add_library (mu_llvm_ STATIC
	api.cpp
	apint/create.cpp
	apint/extension.cpp
	apint/node.cpp
	argument/node.cpp
	array_type/node.cpp
	basic_block/create.cpp
	basic_block/insert.cpp
	basic_block/instruction_insert.cpp
	basic_block/node.cpp
	basic_block/split_return.cpp
	basic_block/store.cpp
	ccall/operation.cpp
	cluster/get.cpp
	cluster/index.cpp
	cluster/node.cpp
	cluster/remap.cpp
	compile/operation.cpp
	constant/create_from_string.cpp
	constant/node.cpp
	constant_int/create.cpp
	constant_int/extension.cpp
	constant_int/node.cpp
	constant_string/create.cpp
	constant_string/extension.cpp
	context/create.cpp
	context/node.cpp
	context/value.cpp
	execution_engine/create_jit.cpp
	execution_engine/node.cpp
	execution_engine/run_function.cpp
	execution_engine/generic_value/create_int.cpp
	execution_engine/generic_value/node.cpp
	function/create.cpp
	function/node.cpp
	function_type/create.cpp
	function_type/divider.cpp
	function_type/node.cpp
	global_value/node.cpp
	global_value/set_linkage.cpp
	global_variable/create.cpp
	global_variable/create_set.cpp
	global_variable/node.cpp
	instruction/node.cpp
	instructions/add.cpp
	instructions/and_c.cpp
	instructions/ashr.cpp
	instructions/bitcast.cpp
	instructions/call.cpp
	instructions/cmpxchg.cpp
	instructions/icmp.cpp
	instructions/inttoptr.cpp
	instructions/load.cpp
	instructions/lshr.cpp
	instructions/mul.cpp
	instructions/or_c.cpp
	instructions/ptrtoint.cpp
	instructions/sdiv.cpp
	instructions/sext.cpp
	instructions/shl.cpp
	instructions/srem.cpp
	instructions/store.cpp
	instructions/sub.cpp
	instructions/trunc.cpp
	instructions/udiv.cpp
	instructions/urem.cpp
	instructions/xor_c.cpp
	instructions/zext.cpp
	integer_type/create.cpp
	integer_type/node.cpp
	istore/operation.cpp
	linkage_types/node.cpp
	linker/link_modules.cpp
	module/add_function.cpp
	module/add_global_variable.cpp
	module/add_package.cpp
	module/assemble.cpp
	module/create.cpp
	module/get_function.cpp
	module/get_package.cpp
	module/merge.cpp
	module/node.cpp
	module/print.cpp
	module/verify.cpp
	null/create.cpp
	pointer_type/create.cpp
	pointer_type/node.cpp
	predicate/node.cpp
	set_type/extract.cpp
	set_type/node.cpp
	struct_type/create.cpp
	struct_type/node.cpp
	synthesizer/operation.cpp
	type/build.cpp
	type/node.cpp
	value/get_context.cpp
	value/get_type.cpp
	value/node.cpp
	value/set_name.cpp
	void_type/node.cpp)