cmake_minimum_required (VERSION 2.8)
project (llvm_)

include_directories (
    ${llvm_include_directories})

link_directories (
    ${llvm_lib_directories})

add_library (mu_llvm_ SHARED
	api.cpp
	apint_create.cpp
	apint_extension.cpp
	apint_node.cpp
	argument_node.cpp
	array_type_node.cpp
    ast_cluster.cpp
    ast_expression.cpp
    ast_parameter.cpp
    ast_reference.cpp
    ast_routine.cpp
	basic_block_create.cpp
	basic_block_insert.cpp
	basic_block_instruction_insert.cpp
	basic_block_node.cpp
	basic_block_split_return.cpp
	basic_block_store.cpp
	ccall_operation.cpp
	cluster_get.cpp
	cluster_index.cpp
	cluster_node.cpp
    cluster_to_extensions.cpp
	compile_operation.cpp
	constant_create_from_string.cpp
	constant_int_create.cpp
	constant_int_extension.cpp
	constant_int_node.cpp
	constant_node.cpp
	constant_string_create.cpp
	constant_string_extension.cpp
	context_create.cpp
	context_node.cpp
	context_value.cpp
    ctx.cpp
	execution_engine_create_jit.cpp
	execution_engine_node.cpp
	execution_engine_run_function.cpp
	execution_engine_generic_value_create_int.cpp
	execution_engine_generic_value_node.cpp
	function_create.cpp
	function_node.cpp
	function_type_create.cpp
	function_type_divider.cpp
	function_type_node.cpp
	global_value_node.cpp
	global_value_set_linkage.cpp
	global_variable_create.cpp
	global_variable_create_set.cpp
	global_variable_node.cpp
    identity_operation.cpp
	instruction_node.cpp
	instructions_add.cpp
	instructions_and_c.cpp
	instructions_ashr.cpp
	instructions_bitcast.cpp
	instructions_call.cpp
	instructions_cmpxchg.cpp
	instructions_icmp.cpp
	instructions_inttoptr.cpp
	instructions_load.cpp
	instructions_lshr.cpp
	instructions_mul.cpp
	instructions_or_c.cpp
	instructions_ptrtoint.cpp
	instructions_sdiv.cpp
	instructions_sext.cpp
	instructions_shl.cpp
	instructions_srem.cpp
	instructions_store.cpp
	instructions_sub.cpp
	instructions_trunc.cpp
	instructions_udiv.cpp
	instructions_urem.cpp
	instructions_xor_c.cpp
	instructions_zext.cpp
	integer_type_create.cpp
	integer_type_node.cpp
	istore_operation.cpp
	linkage_types_node.cpp
	linker_link_modules.cpp
	module_add_function.cpp
	module_add_global_variable.cpp
	module_add_package.cpp
	module_assemble.cpp
	module_create.cpp
	module_get_function.cpp
	module_get_package.cpp
	module_merge.cpp
	module_node.cpp
	module_print.cpp
	module_verify.cpp
	null_create.cpp
    parser_body.cpp
    parser_cluster.cpp
    parser_error.cpp
    parser_expression.cpp
    parser_error.cpp
    parser_parameters.cpp
    parser_parser.cpp
    parser_routine.cpp
    parser_state.cpp
	pointer_type_create.cpp
	pointer_type_node.cpp
	predicate_node.cpp
	set_type_extract.cpp
	set_type_node.cpp
	struct_type_create.cpp
	struct_type_node.cpp
    synthesizer_cluster.cpp
    synthesizer_expression.cpp
    synthesizer_routine.cpp
    synthesizer_synthesizer.cpp
	type_build.cpp
	type_node.cpp
	value_get_context.cpp
	value_get_type.cpp
	value_node.cpp
	value_set_name.cpp
	void_type_node.cpp)
    
target_link_libraries (mu_llvm_
    gc
    LLVM-3.1
    mu_core
    mu_io
    mu_script)